--- a/cv.html
+++ b/cv.html
@@ -151,7 +151,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="dark-section h-100">
-                        <div class="section-title">SKILLS</div>
+                        <div class="section-title white">SKILLS</div>
                         
                         <div class="mb-4">
                             <div class="d-flex justify-content-between">
@@ -275,5 +275,45 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+     <!-- Footer with Social Media -->
+     <footer class="bg-dark text-white py-4 mt-3">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h5>Rangga Febri</h5>
+                    <p class="small">Student at SMKN 2 Cimahi</p>
+                </div>
+                <div class="col-md-6">
+                    <div class="social-media text-md-end">
+                        <h5>Connect With Me</h5>
+                        <div class="mt-2">
+                            <a href="#" class="text-white me-3" title="Instagram">
+                                <i class="fab fa-instagram fa-lg"></i>
+                            </a>
+                            <a href="#" class="text-white me-3" title="Facebook">
+                                <i class="fab fa-facebook fa-lg"></i>
+                            </a>
+                            <a href="#" class="text-white me-3" title="Twitter">
+                                <i class="fab fa-twitter fa-lg"></i>
+                            </a>
+                            <a href="#" class="text-white me-3" title="LinkedIn">
+                                <i class="fab fa-linkedin fa-lg"></i>
+                            </a>
+                            <a href="#" class="text-white me-3" title="GitHub">
+                                <i class="fab fa-github fa-lg"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-12 text-center">
+                    <p class="small mb-0">&copy; 2025 Rangga Febri. All Rights Reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    
 </body>
 </html>
