--- a/index.html
+++ b/index.html
@@ -282,25 +282,19 @@
             <div class="row">
                 <div class="col-md-6">
                     <h5>Rangga Febri</h5>
-                    <p class="small">Student at SMKN 2 Cimahi</p>
+                    <p class="small">Student at Universitas Sangga Buana YPKP Bandung</p>
                 </div>
                 <div class="col-md-6">
                     <div class="social-media text-md-end">
                         <h5>Connect With Me</h5>
                         <div class="mt-2">
-                            <a href="#" class="text-white me-3" title="Instagram">
+                            <a href="https://www.instagram.com/masgerrr_/" class="text-white me-3" title="Instagram">
                                 <i class="fab fa-instagram fa-lg"></i>
                             </a>
-                            <a href="#" class="text-white me-3" title="Facebook">
+                            <a href="https://www.facebook.com/rangga.febriansyah.71" class="text-white me-3" title="Facebook">
                                 <i class="fab fa-facebook fa-lg"></i>
                             </a>
-                            <a href="#" class="text-white me-3" title="Twitter">
-                                <i class="fab fa-twitter fa-lg"></i>
-                            </a>
-                            <a href="#" class="text-white me-3" title="LinkedIn">
-                                <i class="fab fa-linkedin fa-lg"></i>
-                            </a>
-                            <a href="#" class="text-white me-3" title="GitHub">
+                            <a href="https://github.com/rgxkenzoo" class="text-white me-3" title="GitHub">
                                 <i class="fab fa-github fa-lg"></i>
                             </a>
                         </div>
